--- a/Front/package.json
+++ b/Front/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "input-mask": "^1.1.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
