--- a/Front/package.json
+++ b/Front/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "input-mask": "^1.1.20",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.23.1"
